fixed handle save text wrap issue on mobile modal

--- a/src/components/SignUpModal/SignUpModal.scss
+++ b/src/components/SignUpModal/SignUpModal.scss
@@ -592,7 +592,9 @@
     .modal-body {
       .plans {
         font-size: 22px;
-        white-space: nowrap;
+        @media (max-width: 767.9px) {
+          font-size: 20px;
+        }
       }
     }
   }
